fix(Toggle): add toggle overflow
Maybe add overflow will looks better😀

--- a/src/components/styled/toggle.css
+++ b/src/components/styled/toggle.css
@@ -101,6 +101,9 @@
       }
     }
   }
+  &-wrapper {
+    @apply rounded-badge overflow-hidden;
+  }
 }
 
 @keyframes togglemark-off {
